--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
       <h1 class="center title">Timer</h1>
       <ul class="gallery spacing">
         <li>
-          <button type="button" data-outletId="7" data-outletStatus="on" data-minutes=".5" class="toggleOutlet button center">ON</button>
-        </li>
-        <li><div class="center"><button type="button" data-outletId="7" data-outletStatus="off" class="toggleOutlet button">OFF</button></div>
+          <button type="button" class="toggleOutlet button center"><a href="timer.html">ON</a></button>
         </li>
       </ul>
   </body>
