fixed minutes variable in sleep

--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
         <li><div class="center"><button type="button" data-outletId="3" data-outletStatus="off" class="toggleOutlet button">OFF</button></div>
         </li>
       </ul>
+       <h1 class="center title">Timer Test</h1>
+      <ul class="gallery spacing">
+        <li>
+          <button type="button" data-outletId="7" data-outletStatus="on" data-minutes=".1" class="toggleOutlet button center">ON</button>
+        </li>
+        <li><div class="center"><button type="button" data-outletId="7" data-outletStatus="off" class="toggleOutlet button">OFF</button></div>
+        </li>
+      </ul>
+
       <h1 class="center title">Timer</h1>
       <ul class="gallery spacing">
         <li>
